--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,17 +23,12 @@ tauri-plugin-shell = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 # tauri-plugin-positioner = { version = "2.0", features = ["tray-icon"] }
-gtk = { version = "0.18" }
-gdk = { version = "0.18" }
-gio = { version = "0.18" }
-gdk-sys = { version = "0.18" }
-gdkx11 = { version = "0.18" }
 enigo = "0.2.1"
 hidapi = "2.6.3"
 tokio = { version = "1.41.1", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 log = "0.4"
-
+libc = "0.2.169"
 
 
