--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,7 +22,7 @@ tauri = { version = "2", features = [] }
 tauri-plugin-shell = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-# tauri-plugin-positioner = { version = "2.0", features = ["tray-icon"] }
+gtk = { version = "0.18" }
 enigo = "0.2.1"
 hidapi = "2.6.3"
 tokio = { version = "1.41.1", features = ["full"] }
