--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
-    "tauri:dev": "tauri dev"
+    "tauri:dev": "RUST_LOG=debug tauri dev"
   },
   "dependencies": {
     "@tauri-apps/api": "^2",
