--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "virtual-keyboard-pad",
+  "name": "steamdeck-keyboard",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.2.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
